--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.21.3",
@@ -20,6 +21,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-ionicons": "^4.6.5",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
